# omar251990

./: .gitignore  APPLICATION_STRUCTURE.md  DEPLOYMENT_README.md  Makefile  README.md  ROADMAP.md  VERIFICATION_TESTING_GUIDE.md  go.mod
Protei_Bulk/: .gitignore  ADVANCED_FEATURES.md  BACKEND_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_STATUS.md  FEATURE_VERIFICATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTALLATION_GUIDE.md  MULTITENANT_ARCHITECTURE.md  PERFORMANCE_ARCHITECTURE.md  PROFILING_ARCHITECTURE.md  README.md  REQUIREMENTS_MAPPING.md  ROADMAP.md  UNIFIED_ACCESS_ARCHITECTURE.md  install.sh  quick_dev_setup.sh  requirements.txt  uninstall.sh  verify_features.sh
Protei_Bulk/analytics/: README.md
Protei_Bulk/analytics/models/: metrics.py
Protei_Bulk/analytics/services/: analytics_engine.py  report_generator.py
Protei_Bulk/cdr/: README
Protei_Bulk/cdr/archive/: .gitkeep
Protei_Bulk/cdr/http/: .gitkeep
Protei_Bulk/cdr/internal/: .gitkeep
Protei_Bulk/cdr/smpp/: .gitkeep
Protei_Bulk/config/: app.conf  db.conf  license.key  log.conf  network.conf  protocol.conf  security.conf
Protei_Bulk/database/: cdr_schema.sql  dcdl_schema.sql  multitenant_schema.sql  profiling_schema.sql  routing_schema.sql  schema.sql  seed_data.sql  unified_access_schema.sql
Protei_Bulk/docker/: Dockerfile  docker-compose.yml  nginx.conf
Protei_Bulk/docker/kubernetes/: deployment.yaml
Protei_Bulk/document/: API_Reference.docx  Change_Log.docx  Deployment_Manual.docx  Installation_Guide.docx  License_Notes.docx  System_Design_Document.docx  Web_User_Manual.docx
Protei_Bulk/lib/: README
Protei_Bulk/logs/: README
Protei_Bulk/logs/archive/: .gitkeep
Protei_Bulk/scripts/: reload  restart  start  status  stop  version
Protei_Bulk/scripts/utils/: backup_db.sh  check_license.sh  cleanup_tmp.sh  load_seed_data.sh  rotate_logs.sh
Protei_Bulk/simulator/: sms_simulator.py
Protei_Bulk/src/: __init__.py
Protei_Bulk/src/api/: main.py
Protei_Bulk/src/core/: config.py  database.py
Protei_Bulk/src/models/: __init__.py  campaign.py  multitenant.py  profiling.py  quota.py  routing.py  smpp.py  user.py
Protei_Bulk/src/services/: auth.py  customer_service.py  dcdl_service.py  dlr_handler.py  permission_service.py  profile_import_export.py  profile_service.py  (+3 more)
Protei_Bulk/tests/: performance_test.sh
Protei_Bulk/tmp/: README
Protei_Bulk/web/: README.md  WEB_PORTAL_GUIDE.md  package.json
Protei_Bulk_CPP/: CMakeLists.txt  COMMERCIAL_PRODUCT_GUIDE.md  FEATURE_COMPLETE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  build.sh  build_commercial.sh  generate_full_implementation.sh
Protei_Bulk_CPP/config/: app.conf  db.conf  protocol.conf  security.conf
Protei_Bulk_CPP/deployment/usr/protei/Protei_Bulk/: version
Protei_Bulk_CPP/deployment/usr/protei/Protei_Bulk/config/: alarm.cfg  bulk.cfg  license.cfg  routing.json  services.cfg
Protei_Bulk_CPP/deployment/usr/protei/Protei_Bulk/scripts/: reload  restart  start  status  stop
Protei_Bulk_CPP/docker/: Dockerfile  docker-compose.yml
Protei_Bulk_CPP/include/protei/api/: http_server.hpp
Protei_Bulk_CPP/include/protei/core/: config.hpp  database.hpp  license.hpp  logger.hpp  production_logger.hpp  redis_client.hpp
Protei_Bulk_CPP/include/protei/protocols/: smpp_pdu.hpp  smpp_server.hpp
Protei_Bulk_CPP/include/protei/services/: campaign_service.hpp  routing_service.hpp
Protei_Bulk_CPP/src/: main.cpp
Protei_Bulk_CPP/src/api/: http_server.cpp
Protei_Bulk_CPP/src/core/: config.cpp  database.cpp  logger.cpp  production_logger.cpp  redis_client.cpp
Protei_Bulk_CPP/src/protocols/: smpp_server.cpp
Protei_Bulk_CPP/src/services/: campaign_service.cpp  routing_service.cpp
Protei_Bulk_CPP/tests/: CMakeLists.txt  test_config.cpp  test_database.cpp  test_redis.cpp
Protei_Bulk_CPP/web/: package.json
Protei_Bulk_CPP/web/src/: index.css
Protei_Bulk_CPP/web/src/pages/Campaigns/: CampaignList.jsx
Protei_Bulk_CPP/web/src/pages/Contacts/: ContactLists.jsx
Protei_Bulk_CPP/web/src/pages/Dashboard/: EnhancedDashboard.jsx
Protei_Monitoring/: PACKAGE_SUMMARY.md  README.md
Protei_Monitoring/cdr/: README.md
Protei_Monitoring/config/: README.md  paths.cfg  protocols.cfg  security.cfg  system.cfg
Protei_Monitoring/document/: AI_3GPP_INTELLIGENCE_MODULE.md  CDR_GENERATION_GUIDE.md  CORRELATION_ENGINE_GUIDE.md  INSTALLATION_GUIDE.md  OAM_OPERATIONS_GUIDE.md  QUICK_START.md  README.md  WEB_INTERFACE_GUIDE.md
Protei_Monitoring/lib/: README.md
Protei_Monitoring/scripts/: README.md  build.sh  deploy.sh  install.sh  start  status  stop  test.sh  version
cmd/protei-monitoring/: main.go
configs/: config.yaml  license.json.example  rules.yaml
deployment/: VERSION
deployment/config/: db.cfg  license.cfg  trace.cfg
deployment/scripts/: reload  restart  start
dictionaries/ericsson/: causes.yaml  diameter.yaml
dictionaries/huawei/: diameter.yaml
docs/: INSTALLATION.md
pkg/analysis/: analyzer.go
pkg/analytics/: kpi.go
pkg/capture/: pcap.go
pkg/config/: manager.go
pkg/decoder/: types.go
pkg/health/: health.go
pkg/knowledge/: knowledge_base.go
pkg/license/: license.go
pkg/web/: server.go
scripts/: build_deployment_package.sh  decrypt_source.sh  encrypt_source.sh  install.sh  restart.sh  start.sh  status.sh  stop.sh
tools/: generate_license.go
web/templates/: dashboard.html  login.html
(+29 files in other folders)
